refactor: código refatorado parcialmente (sql, models, DTO's, Controllers, Services e Repositories)